[gd_scene load_steps=43 format=3 uid="uid://hg5poslajmme"]

[ext_resource type="Script" path="res://main scripts/aftermenu.gd" id="1_mkps3"]
[ext_resource type="FontFile" uid="uid://dp1ortpeav3ne" path="res://extra/MASQUE__.ttf" id="1_unjkx"]
[ext_resource type="Texture2D" uid="uid://u2xa4cxpn233" path="res://tmaps/12.png" id="3_i4ewd"]
[ext_resource type="Texture2D" uid="uid://bmpj5v86axb07" path="res://tmaps/13.png" id="3_sfvq4"]
[ext_resource type="Texture2D" uid="uid://dfccgk4yemg7j" path="res://assets/t2.png" id="4_3ape1"]
[ext_resource type="Script" path="res://main scenes/b1.gd" id="4_4he1n"]
[ext_resource type="Script" path="res://main scripts/f.gd" id="5_c3xaq"]
[ext_resource type="Script" path="res://main scenes/b2.gd" id="5_y2ujt"]
[ext_resource type="Script" path="res://main scenes/b3.gd" id="6_0nw14"]
[ext_resource type="Script" path="res://main scenes/o.gd" id="9_cfwev"]
[ext_resource type="Texture2D" uid="uid://dg80sp1gcydwe" path="res://png.png" id="10_32fak"]
[ext_resource type="Script" path="res://main scenes/op.gd" id="11_gul1k"]

[sub_resource type="Animation" id="Animation_8bkhs"]
resource_name = "1"
length = 4.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1083, -36), Vector2(1067, 693)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 6.21337]
}

[sub_resource type="Animation" id="Animation_xypyg"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1083, -36)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_j0do3"]
_data = {
"1": SubResource("Animation_8bkhs"),
"RESET": SubResource("Animation_xypyg")
}

[sub_resource type="Animation" id="Animation_ueurg"]
resource_name = "1"
length = 5.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(847, -81), Vector2(811, 687)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 6.28319]
}

[sub_resource type="Animation" id="Animation_3u2lf"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(811, 563)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_i4x3c"]
_data = {
"1": SubResource("Animation_ueurg"),
"RESET": SubResource("Animation_3u2lf")
}

[sub_resource type="Animation" id="Animation_gle68"]
resource_name = "1"
length = 5.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(165, -325), Vector2(189, 719)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 4.71239]
}

[sub_resource type="Animation" id="Animation_jm7do"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(165, -325)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_cu44y"]
_data = {
"1": SubResource("Animation_gle68"),
"RESET": SubResource("Animation_jm7do")
}

[sub_resource type="Animation" id="Animation_2qs36"]
resource_name = "1"
length = 5.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(981, -146), Vector2(987, 689)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 6.28319]
}

[sub_resource type="Animation" id="Animation_yh8pi"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(981, -146)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_onrwd"]
_data = {
"1": SubResource("Animation_2qs36"),
"RESET": SubResource("Animation_yh8pi")
}

[sub_resource type="Animation" id="Animation_pkf55"]
resource_name = "1"
length = 3.5
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 3.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(161, -43), Vector2(185, 699)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 3.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 6.28319]
}

[sub_resource type="Animation" id="Animation_v5gnl"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(161, -43)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_dmupe"]
_data = {
"1": SubResource("Animation_pkf55"),
"RESET": SubResource("Animation_v5gnl")
}

[sub_resource type="Animation" id="Animation_qouh6"]
resource_name = "1"
length = 3.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(699, -210), Vector2(712, 696)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 5.58505]
}

[sub_resource type="Animation" id="Animation_t7uc6"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(728, -44)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_7yjbo"]
_data = {
"1": SubResource("Animation_qouh6"),
"RESET": SubResource("Animation_t7uc6")
}

[sub_resource type="Animation" id="Animation_g3gy4"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(485, -47)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_soojp"]
resource_name = "loop"
length = 4.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(485, -47), Vector2(485, 721)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 5.23599]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_biira"]
_data = {
"RESET": SubResource("Animation_g3gy4"),
"loop": SubResource("Animation_soojp")
}

[sub_resource type="Animation" id="Animation_87nd3"]
resource_name = "1"
length = 7.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 7),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(78, -95), Vector2(102, 711)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 7),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 5.49779]
}

[sub_resource type="Animation" id="Animation_phvwe"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(78, -95)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_4wj8b"]
_data = {
"1": SubResource("Animation_87nd3"),
"RESET": SubResource("Animation_phvwe")
}

[sub_resource type="Animation" id="Animation_jsj1j"]
resource_name = "1"
length = 5.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(394, -154), Vector2(388, 694)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 5.93412]
}

[sub_resource type="Animation" id="Animation_kx3fk"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(394, -154)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_rvd4t"]
_data = {
"1": SubResource("Animation_jsj1j"),
"RESET": SubResource("Animation_kx3fk")
}

[sub_resource type="Animation" id="Animation_ypwfl"]
resource_name = "1"
length = 7.5
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 7.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(714, -76), Vector2(722, 685)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 7.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 6.10865]
}

[sub_resource type="Animation" id="Animation_i6qa1"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(714, -76)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_sqd6t"]
_data = {
"1": SubResource("Animation_ypwfl"),
"RESET": SubResource("Animation_i6qa1")
}

[node name="aftermenu" type="Node2D"]
script = ExtResource("1_mkps3")

[node name="ColorRect2" type="ColorRect" parent="."]
offset_right = 1156.0
offset_bottom = 651.0
color = Color(0.92549, 0.92549, 0.92549, 1)

[node name="T16" type="Sprite2D" parent="."]
visible = false
modulate = Color(1, 1, 1, 0.6)
position = Vector2(1083, -36)
scale = Vector2(0.201172, 0.21875)
texture = ExtResource("4_3ape1")

[node name="AnimationPlayer" type="AnimationPlayer" parent="T16"]
libraries = {
"": SubResource("AnimationLibrary_j0do3")
}

[node name="T14" type="Sprite2D" parent="."]
visible = false
modulate = Color(1, 1, 1, 0.6)
position = Vector2(811, 563)
scale = Vector2(0.201172, 0.21875)
texture = ExtResource("4_3ape1")

[node name="AnimationPlayer" type="AnimationPlayer" parent="T14"]
libraries = {
"": SubResource("AnimationLibrary_i4x3c")
}

[node name="T11" type="Sprite2D" parent="."]
visible = false
modulate = Color(1, 1, 1, 0.6)
position = Vector2(165, -325)
scale = Vector2(0.201172, 0.21875)
texture = ExtResource("4_3ape1")

[node name="AnimationPlayer" type="AnimationPlayer" parent="T11"]
libraries = {
"": SubResource("AnimationLibrary_cu44y")
}

[node name="T13" type="Sprite2D" parent="."]
visible = false
modulate = Color(1, 1, 1, 0.6)
position = Vector2(981, -146)
scale = Vector2(0.201172, 0.21875)
texture = ExtResource("4_3ape1")

[node name="AnimationPlayer" type="AnimationPlayer" parent="T13"]
libraries = {
"": SubResource("AnimationLibrary_onrwd")
}

[node name="T6" type="Sprite2D" parent="."]
visible = false
modulate = Color(1, 1, 1, 0.6)
position = Vector2(161, -43)
scale = Vector2(0.201172, 0.21875)
texture = ExtResource("4_3ape1")

[node name="AnimationPlayer" type="AnimationPlayer" parent="T6"]
libraries = {
"": SubResource("AnimationLibrary_dmupe")
}

[node name="T3" type="Sprite2D" parent="."]
visible = false
modulate = Color(1, 1, 1, 0.6)
position = Vector2(728, -44)
scale = Vector2(0.201172, 0.21875)
texture = ExtResource("4_3ape1")

[node name="AnimationPlayer" type="AnimationPlayer" parent="T3"]
libraries = {
"": SubResource("AnimationLibrary_7yjbo")
}

[node name="T4" type="Sprite2D" parent="."]
visible = false
modulate = Color(1, 1, 1, 0.6)
position = Vector2(485, -47)
scale = Vector2(0.201172, 0.21875)
texture = ExtResource("4_3ape1")

[node name="AnimationPlayer" type="AnimationPlayer" parent="T4"]
libraries = {
"": SubResource("AnimationLibrary_biira")
}

[node name="T9" type="Sprite2D" parent="."]
visible = false
modulate = Color(1, 1, 1, 0.6)
position = Vector2(78, -95)
scale = Vector2(0.201172, 0.21875)
texture = ExtResource("4_3ape1")

[node name="AnimationPlayer" type="AnimationPlayer" parent="T9"]
libraries = {
"": SubResource("AnimationLibrary_4wj8b")
}

[node name="T8" type="Sprite2D" parent="."]
visible = false
modulate = Color(1, 1, 1, 0.6)
position = Vector2(394, -154)
scale = Vector2(0.201172, 0.21875)
texture = ExtResource("4_3ape1")

[node name="AnimationPlayer" type="AnimationPlayer" parent="T8"]
libraries = {
"": SubResource("AnimationLibrary_rvd4t")
}

[node name="T2" type="Sprite2D" parent="."]
visible = false
modulate = Color(1, 1, 1, 0.6)
position = Vector2(714, -76)
scale = Vector2(0.201172, 0.21875)
texture = ExtResource("4_3ape1")

[node name="AnimationPlayer" type="AnimationPlayer" parent="T2"]
libraries = {
"": SubResource("AnimationLibrary_sqd6t")
}

[node name="other title" type="Label" parent="."]
offset_left = -122.0
offset_top = 31.0
offset_right = 1319.0
offset_bottom = 139.0
scale = Vector2(0.951234, 0.951234)
theme_override_colors/font_color = Color(0.278431, 0.682353, 1, 1)
theme_override_colors/font_shadow_color = Color(1, 0.858824, 0.568627, 1)
theme_override_constants/shadow_offset_x = 7
theme_override_constants/shadow_offset_y = 6
theme_override_fonts/font = ExtResource("1_unjkx")
theme_override_font_sizes/font_size = 90
text = "SELECT AN OPTION
"
horizontal_alignment = 1

[node name="b1" type="ColorRect" parent="."]
offset_left = 65.0
offset_top = 147.0
offset_right = 413.0
offset_bottom = 619.0
color = Color(1, 0.858824, 0.568627, 1)
script = ExtResource("4_4he1n")

[node name="b2" type="ColorRect" parent="."]
offset_left = 421.0
offset_top = 147.0
offset_right = 771.0
offset_bottom = 619.0
color = Color(1, 0.858824, 0.568627, 1)
script = ExtResource("5_y2ujt")

[node name="b3" type="ColorRect" parent="."]
offset_left = 785.0
offset_top = 147.0
offset_right = 1112.0
offset_bottom = 619.0
color = Color(1, 0.858824, 0.568627, 1)
script = ExtResource("6_0nw14")

[node name="b4" type="ColorRect" parent="."]
offset_left = 793.0
offset_top = 153.0
offset_right = 1106.0
offset_bottom = 613.0
color = Color(0.92549, 0.92549, 0.92549, 1)

[node name="f" type="TextureRect" parent="."]
offset_left = 73.0
offset_top = 154.0
offset_right = 395.0
offset_bottom = 601.0
scale = Vector2(1.03363, 1.02308)
texture = ExtResource("3_i4ewd")
script = ExtResource("5_c3xaq")

[node name="o" type="TextureRect" parent="."]
offset_left = 427.0
offset_top = 154.0
offset_right = 765.0
offset_bottom = 613.0
texture = ExtResource("3_sfvq4")
script = ExtResource("9_cfwev")

[node name="op" type="TextureRect" parent="."]
modulate = Color(1, 1, 1, 0.411765)
offset_left = 793.0
offset_top = 153.0
offset_right = 1106.0
offset_bottom = 613.0
texture = ExtResource("10_32fak")
script = ExtResource("11_gul1k")

[node name="Label" type="Label" parent="."]
modulate = Color(1, 1, 1, 0.85098)
offset_left = 849.0
offset_top = 246.0
offset_right = 1050.0
offset_bottom = 297.0
theme_override_colors/font_color = Color(0.278431, 0.682353, 1, 1)
theme_override_fonts/font = ExtResource("1_unjkx")
theme_override_font_sizes/font_size = 40
text = "OPTIONS"

[connection signal="click" from="f" to="f" method="_on_click"]
[connection signal="mouse_entered" from="f" to="f" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="f" to="f" method="_on_mouse_exited"]
[connection signal="n" from="f" to="b1" method="_on_f_n"]
[connection signal="o" from="f" to="b1" method="_on_f_o"]
[connection signal="c" from="o" to="o" method="_on_c"]
[connection signal="mouse_entered" from="o" to="o" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="o" to="o" method="_on_mouse_exited"]
[connection signal="r" from="o" to="b2" method="_on_o_r"]
[connection signal="t" from="o" to="b2" method="_on_o_t"]
[connection signal="a" from="op" to="b3" method="_on_op_a"]
[connection signal="cl" from="op" to="op" method="_on_cl"]
[connection signal="mouse_entered" from="op" to="op" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="op" to="op" method="_on_mouse_exited"]
[connection signal="s" from="op" to="b3" method="_on_op_s"]
